--- a/RollingPaper/RollingPaper/DockController.xib
+++ b/RollingPaper/RollingPaper/DockController.xib
@@ -41,6 +41,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 38}, {52, 348}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="34602164"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -54,6 +55,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 165}, {46, 40}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="827307220"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -92,6 +94,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 219}, {46, 45}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="928954047"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -116,6 +119,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 106}, {44, 42}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="261782342"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -140,6 +144,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-7, 59}, {58, 23}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="698674236"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -165,6 +170,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-12, 287}, {55, 28}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="441499149"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -190,6 +196,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{51, 38}, {27, 37}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1030624655"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -215,6 +222,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 343}, {27, 27}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -237,6 +245,7 @@
 				</array>
 				<string key="NSFrameSize">{78, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="904376874"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -365,39 +374,8 @@
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="698674236"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="603674714"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">6</int>
-						<reference key="object" ref="904376874"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="603674714"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="928954047"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="603674714"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="1030624655"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="603674714"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">9</int>
-						<reference key="object" ref="827307220"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="603674714"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">10</int>
-						<reference key="object" ref="261782342"/>
-						<array class="NSMutableArray" key="children"/>
+						<int key="objectID">72</int>
+						<reference key="object" ref="441499149"/>
 						<reference key="parent" ref="603674714"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -406,8 +384,33 @@
 						<reference key="parent" ref="603674714"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">72</int>
-						<reference key="object" ref="441499149"/>
+						<int key="objectID">7</int>
+						<reference key="object" ref="928954047"/>
+						<reference key="parent" ref="603674714"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">6</int>
+						<reference key="object" ref="904376874"/>
+						<reference key="parent" ref="603674714"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">8</int>
+						<reference key="object" ref="1030624655"/>
+						<reference key="parent" ref="603674714"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">9</int>
+						<reference key="object" ref="827307220"/>
+						<reference key="parent" ref="603674714"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">10</int>
+						<reference key="object" ref="261782342"/>
+						<reference key="parent" ref="603674714"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">5</int>
+						<reference key="object" ref="698674236"/>
 						<reference key="parent" ref="603674714"/>
 					</object>
 				</array>
@@ -432,9 +435,70 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">73</int>
+			<int key="maxID">142</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DockController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="onTouchAlbum:">id</string>
+						<string key="onTouchCamera:">id</string>
+						<string key="onTouchKeyboard:">id</string>
+						<string key="onTouchMicrophone:">id</string>
+						<string key="onTouchPencilcase:">id</string>
+						<string key="onTouchSave:">id</string>
+						<string key="onTouchShowToggleButton:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="onTouchAlbum:">
+							<string key="name">onTouchAlbum:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchCamera:">
+							<string key="name">onTouchCamera:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchKeyboard:">
+							<string key="name">onTouchKeyboard:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchMicrophone:">
+							<string key="name">onTouchMicrophone:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchPencilcase:">
+							<string key="name">onTouchPencilcase:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchSave:">
+							<string key="name">onTouchSave:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchShowToggleButton:">
+							<string key="name">onTouchShowToggleButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">dockView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">dockView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">dockView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DockController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
